logs/lexor.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports/configparser'...
Listing './lib/python3.5/site-packages/configparser-3.5.0.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/lexor'...
Listing './lib/python3.5/site-packages/lexor/command'...
Compiling './lib/python3.5/site-packages/lexor/command/cloud.py'...
***   File "./lib/python3.5/site-packages/lexor/command/cloud.py", line 173
    print '{0:35} {1:>35}'.format(name, url)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lexor/command/document.py'...
***   File "./lib/python3.5/site-packages/lexor/command/document.py", line 236
    print repr(prop)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lexor/command/install.py'...
***   File "./lib/python3.5/site-packages/lexor/command/install.py", line 178
    except urllib2.HTTPError, err:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lexor/command/paste.py'...
***   File "./lib/python3.5/site-packages/lexor/command/paste.py", line 41
    print 'Opening: %s' % sfile
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lexor/core'...
Compiling './lib/python3.5/site-packages/lexor/core/node.py'...
***   File "./lib/python3.5/site-packages/lexor/core/node.py", line 54
    print '-'*10
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/lexor/core/selector.py'...
***   File "./lib/python3.5/site-packages/lexor/core/selector.py", line 104
    print 'ERROR'
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lexor/core/templates'...
Listing './lib/python3.5/site-packages/lexor/util'...
Listing './lib/python3.5/site-packages/lexor-0.1.5rc0.egg-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
